feat: 增加安全STR模式 	- （core) 安全械下只保留纯文本格式 	- menuButton: toolbar格式没找到列表中的时显示“不支持格式” 	- selection: 强制str粘贴 	- sheetmanage: 添加新sheet强制str 	- extend: 插入行、列强制纯文本

--- a/src/index.html
+++ b/src/index.html
@@ -1913,6 +1913,9 @@
 			//      "isPivotTable": false
 			//  };
 			//  luckysheet.sheetmanage.setCustomSheet(customSheetconfig);
+			// debug
+			// options.safeStrMode = false
+			options.safeStrMode = true
 			luckysheet.create(options);
 		})
 	</script>
